update run.sh to run uber jar